2004-08-17  Zoltan Varga  <vargaz@freemail.hu>

	* mono/os/gc_wrapper.h: Only use thread local alloc if using the included libgc, since the
	stock one has broken headers.

	* configure.in (PLATFORM_WIN32): Make the included libgc the default on windows.

2004-08-17  Dick Porter  <dick@ximian.com>

	* configure.in: Correct intl library for FreeBSD and OpenBSD.
	Fixes bug 62884, patch by Tom McLaughlin (tmclaugh@sdf.lonestar.org).

2004-08-16  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Set new automake variable LIBGC_STATIC_LIBS.

2004-08-14  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in (HAVE_KW_THREAD): Pass USE_COMPILER_TLS to libgc if
	__thread works.

2004-08-11  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Fix __thread test.

2004-08-07  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Add proper checks for the 'undefined reference to '__tls_get_addr' problem.

2004-08-06  Geoff Norton  <gnorton@customerdna.com>

	* configure.in: Add a kqueue check

2004-08-03  Neale Ferguson <Neale.Ferguson@SoftwareAG-usa.com>

	* configure.in: Enable S/390 64-bit JIT.

2004-07-31  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Enable AMD64 JIT.

2004-07-30  Martin Baulig  <martin@ximian.com>

	* Makefile.am: The symbol writer is now called
	Mono.CompilerServices.SymbolWriter.dll.	

2004-07-30  Raja R Harinath  <rharinath@novell.com>

	* runtime/Makefile.am (monoone_DATA): Add mcs.exe.config.
	(gmcs_exe): Add gmcs.exe.config.
	($(monoone_DATA) $(monotwo_DATA) ...): Add location of the .config
	files too.

2004-07-29  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Copy machine.config in the correct _tmpinst subdirectory.

2004-07-28  Lluis Sanchez Gual  <lluis@novell.com>

	* configure.in: Added data/net_1_1 and data/net_2_0 to the build.
	* data/Makefile.am: Removed installation of machine.config and
	  DefaultWsdlHelpGenerator.aspx. Those now are in a version-specific
	  directory.